[workspace]
members = [
  "cf-worker",
  "standalone",
  "shared-lib"
]
package.version = "2.4.7"
resolver = "2"

[workspace.dependencies]
shared-lib = { path = "./shared-lib" }
serde_json = "1.0.139"
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tokio = { version = "1.43.0", features = ["full"] }
worker = { version="0.5.0", features=['http', 'queue'] }
axum = "0.8.1"

