[package]
name = "hookbuffer-cf-worker"
version = "0.1.0"
edition = "2021"
authors = [ "Zac <git@zac.gg>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# shared-lib = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
worker = { version="0.5.0", features=['http', 'queue'] }
worker-macros = { version="0.5.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
tower-service = "0.3.3"
twilight-model = "0.16.0"
serde-wasm-bindgen = "0.6.5"
