[package]
name = "shared-lib"
version = "3.0.0"
edition = "2021"

[features]
default = []
worker = ["dep:worker"]
standalone = ["dep:tracing"]

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
worker = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
reqwest = { version="0.12.12", features=["json"]}
axum = {version="0.8.1", default-features=false, features=["json"]}
tokio = { version = "1.43.0", default-features = false, features = ["time"] }
twilight-model = "0.16.0"
base64 = "0.22.1"
