[package]
name = "hookbuffer-standalone"
version.workspace = true
edition = "2021"

[dependencies]
shared-lib = {workspace = true, features=["standalone"]}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tokio = {workspace = true}
futures = "0.3.31"
serial_test = "3.2.0"
axum = { workspace = true}
tower-http = { version = "0.4.3", features = ["trace", "fs", "compression-gzip"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
